Updated page Manual:Parametric objects/cs

--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -78,7 +78,7 @@
 <ol><li>P&#345;epo&#269;&iacute;t&aacute;n&iacute; nen&iacute; v&#382;dy automatick&eacute;. N&aacute;ro&#269;n&aacute; operace, kter&aacute; m&#367;&#382;e zm&#283;nit velkou &#269;&aacute;st dokumentu a proto zabere n&#283;jak&yacute; &#269;as, se neprov&aacute;d&iacute; automaticky. M&iacute;sto toho bude objekt (a v&scaron;echny objekty, kter&eacute; na n&#283;m z&aacute;vis&iacute;) ozna&#269;en k p&#345;epo&#269;&iacute;t&aacute;n&iacute; (v zobrazen&iacute; stromu se na nich objev&iacute; mal&aacute; modr&aacute; ikona). Pot&eacute; mus&iacute;te stisknout tla&#269;&iacute;tko p&#345;epo&#269;&iacute;tat (nebo <b>Upravit-&gt;Obnovit</b>), aby byly v&scaron;echny ozna&#269;en&eacute; objekty p&#345;epo&#269;&iacute;t&aacute;ny.</li>
 <li>Strom z&aacute;vislost&iacute; mus&iacute; v&#382;dy sm&#283;&#345;ovat stejn&yacute;m sm&#283;rem. Smy&#269;ky jsou zak&aacute;z&aacute;ny. (viz <a href="../Glossary.html#Directed_Acyclic_Graph" title="Glossary">DAG</a> a <a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG zobrazen&iacute;</a>). M&#367;&#382;ete m&iacute;t objekt A, kter&yacute; z&aacute;vis&iacute; na objektu B, kter&yacute; z&aacute;vis&iacute; na objektu C. Nem&#367;&#382;ete v&scaron;ak m&iacute;t objekt A, kter&yacute; z&aacute;vis&iacute; na objektu B, kter&yacute; z&aacute;vis&iacute; na objektu A. To by byla cyklick&aacute; z&aacute;vislost. M&#367;&#382;ete v&scaron;ak m&iacute;t mnoho objekt&#367;, kter&eacute; z&aacute;vis&iacute; na stejn&eacute;m objektu, nap&#345;&iacute;klad objekty B a C z&aacute;vis&iacute; na objektu A. Menu <b>N&aacute;stroje -&gt; Graf z&aacute;vislost&iacute;</b> zobraz&iacute; diagram z&aacute;vislost&iacute;, jako na obr&aacute;zku v&yacute;&scaron;e. M&#367;&#382;e b&yacute;t u&#382;ite&#269;n&yacute; pro odhalen&iacute; probl&eacute;m&#367;.</li></ol>
 <p>V procesu parametrick&eacute;ho modelov&aacute;n&iacute; ve FreeCADu poskytuje zkoum&aacute;n&iacute; stromu z&aacute;vislost&iacute; objektu jasn&yacute; p&#345;ehled o postupn&eacute;m sestavov&aacute;n&iacute; a vztaz&iacute;ch v r&aacute;mci modelu. Z&aacute;kladem struktury v v&yacute;&scaron;e uveden&eacute;m p&#345;&iacute;kladu je 'Plate Sketch' (n&aacute;&#269;rt desky), kter&yacute; slou&#382;&iacute; jako z&aacute;klad pro po&#269;&aacute;te&#269;n&iacute; podobu modelu. Pot&eacute; se pou&#382;ije operace 'Pad' (vyplnit), kter&aacute; p&#345;id&aacute; materi&aacute;l k tomuto z&aacute;kladn&iacute;mu n&aacute;&#269;rtu a efektivn&#283; vytvo&#345;&iacute; trojrozm&#283;rnou strukturu z dvojrozm&#283;rn&eacute;ho z&aacute;kladu.
-</p><p>Following this, a 'Circle Sketch' is drafted on the newly formed surface. This circle forms the basis for the subsequent 'Pocket' operation. The pocket operation strategically removes material from the structure, essentially carving out a portion based on the circle sketch. This process of adding and then subtracting material allows for complex geometries and features to be integrated into the basic model seamlessly.
+</p><p>N&aacute;sledn&#283; se na nov&#283; vytvo&#345;en&eacute;m povrchu nakresl&iacute; 'kruhov&yacute; n&aacute;&#269;rt'. Tento kruh tvo&#345;&iacute; z&aacute;klad pro n&aacute;slednou operaci 'kapsy'. Operace kapsy strategicky odstra&#328;uje materi&aacute;l ze struktury, v podstat&#283; vy&#345;ez&aacute;v&aacute; &#269;&aacute;st na z&aacute;klad&#283; kruhov&eacute;ho n&aacute;&#269;rtu. Tento proces p&#345;id&aacute;v&aacute;n&iacute; a n&aacute;sledn&eacute;ho odeb&iacute;r&aacute;n&iacute; materi&aacute;lu umo&#382;&#328;uje hladk&eacute; za&#269;len&#283;n&iacute; slo&#382;it&yacute;ch geometri&iacute; a prvk&#367; do z&aacute;kladn&iacute;ho modelu.
 </p><p>Through this sequence of operations&mdash;starting from the base sketch, adding volume with a pad, and creating detailed features with additional sketches and pockets&mdash;the final object takes shape. Each step in this chain depends on its predecessor, illustrating the interconnected nature of parametric design in FreeCAD.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ParametricDesignDependGraph.png&amp;filetimestamp=20240614234737&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ParametricDesignDependGraph.png" decoding="async" width="331" height="605" class="mw-file-element" data-file-width="331" data-file-height="605"></a></span>
 </p><p>Not all objects are parametric in FreeCAD. Often, the geometry that you import from other files won't contain any parameters and will be simple, non-parametric objects. However, these can often be used as a base, or starting point for newly created parametric objects, depending, of course, on what the parametric object requires and the quality of the imported geometry.
@@ -101,12 +101,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112052725
+Cached time: 20260112052815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.058 seconds
-Real time usage: 0.095 seconds
+CPU time usage: 0.057 seconds
+Real time usage: 0.086 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8512/2097152 bytes
 Template argument size: 866/2097152 bytes
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.178      1 -total
- 65.08%    7.926      1 Template:Manual:TOC
- 54.26%    6.608      1 Manual:Summary/cs
- 21.15%    2.575      2 Template:Docnav
- 10.11%    1.231      2 Template:MenuCommand
+100.00%   10.378      1 -total
+ 65.40%    6.787      1 Template:Manual:TOC
+ 49.26%    5.112      1 Manual:Summary/cs
+ 17.41%    1.807      2 Template:Docnav
+ 13.41%    1.391      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052725 and revision id 1737150. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052815 and revision id 1737153. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
