Created page with "Prostřednictvím této sekvence operací – počínaje základním náčrtem, přidáním objemu pomocí výplně a vytvořením detailních prvků pomocí dalších náčrtů a kapes – vzniká finální objekt. Každý krok v tomto řetězci závisí na předchozím kroku, což ilustruje propojenou povahu parametrického návrhu ve FreeCADu."

--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Gli oggetti Parametrici (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Obiekty parametryczne (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:obiecte parametrice (15% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1055;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1077; &#1086;&#1073;&#1098;&#1077;&#1082;&#1090;&#1099; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#21442;&#25968;&#21270;&#23545;&#35937; (30% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12497;&#12521;&#12513;&#12488;&#12522;&#12483;&#12463;&#12539;&#12458;&#12502;&#12472;&#12455;&#12463;&#12488; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -79,7 +79,7 @@
 <li>Strom z&aacute;vislost&iacute; mus&iacute; v&#382;dy sm&#283;&#345;ovat stejn&yacute;m sm&#283;rem. Smy&#269;ky jsou zak&aacute;z&aacute;ny. (viz <a href="../Glossary.html#Directed_Acyclic_Graph" title="Glossary">DAG</a> a <a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG zobrazen&iacute;</a>). M&#367;&#382;ete m&iacute;t objekt A, kter&yacute; z&aacute;vis&iacute; na objektu B, kter&yacute; z&aacute;vis&iacute; na objektu C. Nem&#367;&#382;ete v&scaron;ak m&iacute;t objekt A, kter&yacute; z&aacute;vis&iacute; na objektu B, kter&yacute; z&aacute;vis&iacute; na objektu A. To by byla cyklick&aacute; z&aacute;vislost. M&#367;&#382;ete v&scaron;ak m&iacute;t mnoho objekt&#367;, kter&eacute; z&aacute;vis&iacute; na stejn&eacute;m objektu, nap&#345;&iacute;klad objekty B a C z&aacute;vis&iacute; na objektu A. Menu <b>N&aacute;stroje -&gt; Graf z&aacute;vislost&iacute;</b> zobraz&iacute; diagram z&aacute;vislost&iacute;, jako na obr&aacute;zku v&yacute;&scaron;e. M&#367;&#382;e b&yacute;t u&#382;ite&#269;n&yacute; pro odhalen&iacute; probl&eacute;m&#367;.</li></ol>
 <p>V procesu parametrick&eacute;ho modelov&aacute;n&iacute; ve FreeCADu poskytuje zkoum&aacute;n&iacute; stromu z&aacute;vislost&iacute; objektu jasn&yacute; p&#345;ehled o postupn&eacute;m sestavov&aacute;n&iacute; a vztaz&iacute;ch v r&aacute;mci modelu. Z&aacute;kladem struktury v v&yacute;&scaron;e uveden&eacute;m p&#345;&iacute;kladu je 'Plate Sketch' (n&aacute;&#269;rt desky), kter&yacute; slou&#382;&iacute; jako z&aacute;klad pro po&#269;&aacute;te&#269;n&iacute; podobu modelu. Pot&eacute; se pou&#382;ije operace 'Pad' (vyplnit), kter&aacute; p&#345;id&aacute; materi&aacute;l k tomuto z&aacute;kladn&iacute;mu n&aacute;&#269;rtu a efektivn&#283; vytvo&#345;&iacute; trojrozm&#283;rnou strukturu z dvojrozm&#283;rn&eacute;ho z&aacute;kladu.
 </p><p>N&aacute;sledn&#283; se na nov&#283; vytvo&#345;en&eacute;m povrchu nakresl&iacute; 'kruhov&yacute; n&aacute;&#269;rt'. Tento kruh tvo&#345;&iacute; z&aacute;klad pro n&aacute;slednou operaci 'kapsy'. Operace kapsy strategicky odstra&#328;uje materi&aacute;l ze struktury, v podstat&#283; vy&#345;ez&aacute;v&aacute; &#269;&aacute;st na z&aacute;klad&#283; kruhov&eacute;ho n&aacute;&#269;rtu. Tento proces p&#345;id&aacute;v&aacute;n&iacute; a n&aacute;sledn&eacute;ho odeb&iacute;r&aacute;n&iacute; materi&aacute;lu umo&#382;&#328;uje hladk&eacute; za&#269;len&#283;n&iacute; slo&#382;it&yacute;ch geometri&iacute; a prvk&#367; do z&aacute;kladn&iacute;ho modelu.
-</p><p>Through this sequence of operations&mdash;starting from the base sketch, adding volume with a pad, and creating detailed features with additional sketches and pockets&mdash;the final object takes shape. Each step in this chain depends on its predecessor, illustrating the interconnected nature of parametric design in FreeCAD.
+</p><p>Prost&#345;ednictv&iacute;m t&eacute;to sekvence operac&iacute; &ndash; po&#269;&iacute;naje z&aacute;kladn&iacute;m n&aacute;&#269;rtem, p&#345;id&aacute;n&iacute;m objemu pomoc&iacute; v&yacute;pln&#283; a vytvo&#345;en&iacute;m detailn&iacute;ch prvk&#367; pomoc&iacute; dal&scaron;&iacute;ch n&aacute;&#269;rt&#367; a kapes &ndash; vznik&aacute; fin&aacute;ln&iacute; objekt. Ka&#382;d&yacute; krok v tomto &#345;et&#283;zci z&aacute;vis&iacute; na p&#345;edchoz&iacute;m kroku, co&#382; ilustruje propojenou povahu parametrick&eacute;ho n&aacute;vrhu ve FreeCADu.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ParametricDesignDependGraph.png&amp;filetimestamp=20240614234737&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ParametricDesignDependGraph.png" decoding="async" width="331" height="605" class="mw-file-element" data-file-width="331" data-file-height="605"></a></span>
 </p><p>Not all objects are parametric in FreeCAD. Often, the geometry that you import from other files won't contain any parameters and will be simple, non-parametric objects. However, these can often be used as a base, or starting point for newly created parametric objects, depending, of course, on what the parametric object requires and the quality of the imported geometry.
 </p><p>All objects, however, parametric or not, will have a couple of basic parameters, such as a Name, which is unique in the document and cannot be edited, a Label, which is a user-defined name that can be edited, and a <a href="../Placement.html" title="Placement">placement</a>, which holds its position in the 3D space.
@@ -101,30 +101,30 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112052815
+Cached time: 20260112052845
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.057 seconds
-Real time usage: 0.086 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.100 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8512/2097152 bytes
 Template argument size: 866/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2645/5000000 bytes
+Unstrip post&#8208;expand size: 2646/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.378      1 -total
- 65.40%    6.787      1 Template:Manual:TOC
- 49.26%    5.112      1 Manual:Summary/cs
- 17.41%    1.807      2 Template:Docnav
- 13.41%    1.391      2 Template:MenuCommand
+100.00%    9.035      1 -total
+ 59.14%    5.343      1 Template:Manual:TOC
+ 44.76%    4.044      1 Manual:Summary/cs
+ 23.22%    2.098      2 Template:Docnav
+ 10.96%    0.990      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052815 and revision id 1737153. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052844 and revision id 1737155. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
