--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Preferences/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Preferences&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Preferences.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Preferences (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Pr&eacute;f&eacute;rences (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/TechDraw_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Preferences/hr (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
@@ -17,11 +17,8 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Einleitung">Einleitung</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Die Einstellungen f&uuml;r den Arbeitsbereich <span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a> findet man im <a href="../de/Preferences_Editor.html" title="Preferences Editor/de">Voreinstellungseditor</a>. Den Men&uuml;eintrag <b>Bearbeiten &rarr; Einstellungen...</b> ausw&auml;hlen und dann <b><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> TechDraw</b>. Diese Gruppe steht nur dann zur Verf&uuml;gung, wenn der Arbeitsbereich TechDraw in der aktuellen FreeCAD-Sitzung geladen wurde.
-</p>
-</div>
-<p>Es gibt sieben Seiten: <a href="#General/de">Allgemein</a>, <a href="#Scale/de">Skalieren</a>, <a href="#Dimensions/de">Ma&szlig;eintr&auml;ge</a>, <a href="#Annotation/de">Beschriftung</a>, <a href="#Colors/de">Farben</a>, <a href="#HLR/de">Ausblenden verdeckter Kanten (HLR)</a> und <a href="#Advanced/de">Erweitert</a>.
+<p>Die Einstellungen f&uuml;r den <span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de"> Arbeitsbereich TechDraw</a> findet man im <a href="../de/Preferences_Editor.html" title="Preferences Editor/de">Voreinstellungseditor</a>. Den Men&uuml;eintrag <b>Bearbeiten &rarr; Einstellungen</b> ausw&auml;hlen und dann <b><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> TechDraw</b>. Diese Gruppe steht nur dann zur Verf&uuml;gung, wenn der Arbeitsbereich TechDraw in der aktuellen FreeCAD-Sitzung geladen wurde.
+</p><p>Es gibt sieben Seiten: <a href="#General/de">Allgemein</a>, <a href="#Scale/de">Skalieren</a>, <a href="#Dimensions/de">Ma&szlig;eintr&auml;ge</a>, <a href="#Annotation/de">Beschriftung</a>, <a href="#Colors/de">Farben</a>, <a href="#HLR/de">Ausblenden verdeckter Kanten (HLR)</a> und <a href="#Advanced/de">Erweitert</a>.
 </p><p>Alle Einstellungen mit <i>kursiven</i> Beschriftungen sind Standardwerte f&uuml;r neue Zeichnungsobjekte. Sie haben keinen Einfluss auf bestehende Objekte.
 </p><p><span id="General"></span>
 </p>
@@ -308,35 +305,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051635
+Cached time: 20260112052920
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.164 seconds
-Preprocessor visited node count: 646/1000000
-Post&#8208;expand include size: 28290/2097152 bytes
-Template argument size: 10626/2097152 bytes
+CPU time usage: 0.110 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 645/1000000
+Post&#8208;expand include size: 28287/2097152 bytes
+Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1721/5000000 bytes
+Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.492      1 -total
- 31.94%    6.864      1 Template:TechDraw_Tools_navi/de
- 16.33%    3.509      2 Template:Navigation_menu_2
- 12.75%    2.740      2 Template:Docnav/de
- 10.86%    2.334     33 Template:Version/de
-  8.84%    1.900      1 Template:Userdocnavi/de
-  7.21%    1.550      2 Template:MenuCommand
-  7.15%    1.536      1 Template:TOCright
-  5.30%    1.139      1 Template:KEY
-  5.25%    1.128      2 Template:Button
+100.00%   19.558      1 -total
+ 36.14%    7.069      1 Template:TechDraw_Tools_navi/de
+ 16.84%    3.294      2 Template:Navigation_menu_2
+ 15.18%    2.969     33 Template:Version/de
+ 10.21%    1.996      2 Template:Docnav/de
+  8.36%    1.634      1 Template:Userdocnavi/de
+  5.16%    1.009      2 Template:Button
+  5.03%    0.984      1 Template:KEY
+  4.94%    0.966      2 Template:MenuCommand
+  4.88%    0.955      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112051635 and revision id 1737133. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112052920 and revision id 1737160. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
