--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -18,7 +18,7 @@
 </p>
 <h2><span class="mw-headline" id="Einleitung">Einleitung</span></h2>
 <p>Die Einstellungen f&uuml;r den <span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de"> Arbeitsbereich TechDraw</a> findet man im <a href="../de/Preferences_Editor.html" title="Preferences Editor/de">Voreinstellungseditor</a>. Den Men&uuml;eintrag <b>Bearbeiten &rarr; Einstellungen</b> ausw&auml;hlen und dann <b><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> TechDraw</b>. Diese Gruppe steht nur dann zur Verf&uuml;gung, wenn der Arbeitsbereich TechDraw in der aktuellen FreeCAD-Sitzung geladen wurde.
-</p><p>Es gibt sieben Seiten: <a href="#General/de">Allgemein</a>, <a href="#Scale/de">Skalieren</a>, <a href="#Dimensions/de">Ma&szlig;eintr&auml;ge</a>, <a href="#Annotation/de">Beschriftung</a>, <a href="#Colors/de">Farben</a>, <a href="#HLR/de">Ausblenden verdeckter Kanten (HLR)</a> und <a href="#Advanced/de">Erweitert</a>.
+</p><p>Es gibt sieben Seiten: <a href="#General">Allgemein</a>, <a href="#Scale">Skalieren</a>, <a href="#Dimensions">Ma&szlig;eintr&auml;ge</a>, <a href="#Annotation">Beschriftung</a>, <a href="#Colors">Farben</a>, <a href="#HLR">Ausblenden verdeckter Kanten (HLR)</a> und <a href="#Advanced">Erweitert</a>.
 </p><p>Alle Einstellungen mit <i>kursiven</i> Beschriftungen sind Standardwerte f&uuml;r neue Zeichnungsobjekte. Sie haben keinen Einfluss auf bestehende Objekte.
 </p><p><span id="General"></span>
 </p>
@@ -305,12 +305,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112052920
+Cached time: 20260112053155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.137 seconds
 Preprocessor visited node count: 645/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
@@ -321,19 +321,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.558      1 -total
- 36.14%    7.069      1 Template:TechDraw_Tools_navi/de
- 16.84%    3.294      2 Template:Navigation_menu_2
- 15.18%    2.969     33 Template:Version/de
- 10.21%    1.996      2 Template:Docnav/de
-  8.36%    1.634      1 Template:Userdocnavi/de
-  5.16%    1.009      2 Template:Button
-  5.03%    0.984      1 Template:KEY
-  4.94%    0.966      2 Template:MenuCommand
-  4.88%    0.955      1 Template:TOCright
+100.00%   21.360      1 -total
+ 37.53%    8.016      1 Template:TechDraw_Tools_navi/de
+ 23.45%    5.008      2 Template:Navigation_menu_2
+ 11.15%    2.381     33 Template:Version/de
+  9.57%    2.044      1 Template:Userdocnavi/de
+  9.23%    1.972      2 Template:Docnav/de
+  6.03%    1.288      2 Template:Button
+  5.74%    1.226      1 Template:TOCright
+  5.36%    1.144      1 Template:KEY
+  5.14%    1.097      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112052920 and revision id 1737160. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112053154 and revision id 1737162. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
