--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -82,7 +82,7 @@
 </p><p>Prost&#345;ednictv&iacute;m t&eacute;to sekvence operac&iacute; &ndash; po&#269;&iacute;naje z&aacute;kladn&iacute;m n&aacute;&#269;rtem, p&#345;id&aacute;n&iacute;m objemu pomoc&iacute; v&yacute;pln&#283; a vytvo&#345;en&iacute;m detailn&iacute;ch prvk&#367; pomoc&iacute; dal&scaron;&iacute;ch n&aacute;&#269;rt&#367; a kapes &ndash; vznik&aacute; fin&aacute;ln&iacute; objekt. Ka&#382;d&yacute; krok v tomto &#345;et&#283;zci z&aacute;vis&iacute; na p&#345;edchoz&iacute;m kroku, co&#382; ilustruje propojenou povahu parametrick&eacute;ho n&aacute;vrhu ve FreeCADu.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ParametricDesignDependGraph.png&amp;filetimestamp=20240614234737&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ParametricDesignDependGraph.png" decoding="async" width="331" height="605" class="mw-file-element" data-file-width="331" data-file-height="605"></a></span>
 </p><p>Ne v&scaron;echny objekty jsou ve FreeCADu parametrick&eacute;. Geometrie, kterou importujete z jin&yacute;ch soubor&#367;, &#269;asto neobsahuje &#382;&aacute;dn&eacute; parametry a jedn&aacute; se o jednoduch&eacute;, neparametrick&eacute; objekty. Ty v&scaron;ak lze &#269;asto pou&#382;&iacute;t jako z&aacute;klad nebo v&yacute;choz&iacute; bod pro nov&#283; vytvo&#345;en&eacute; parametrick&eacute; objekty, samoz&#345;ejm&#283; v z&aacute;vislosti na po&#382;adavc&iacute;ch parametrick&eacute;ho objektu a kvalit&#283; importovan&eacute; geometrie.
-</p><p>All objects, however, parametric or not, will have a couple of basic parameters, such as a Name, which is unique in the document and cannot be edited, a Label, which is a user-defined name that can be edited, and a <a href="../Placement.html" title="Placement">placement</a>, which holds its position in the 3D space.
+</p><p>V&scaron;echny objekty, a&#357; u&#382; parametrick&eacute; nebo ne, v&scaron;ak budou m&iacute;t n&#283;kolik z&aacute;kladn&iacute;ch parametr&#367;, jako je n&aacute;zev, kter&yacute; je v dokumentu jedine&#269;n&yacute; a nelze ho upravovat, &scaron;t&iacute;tek, co&#382; je u&#382;ivatelsky definovan&yacute; n&aacute;zev, kter&yacute; lze upravovat, a <a href="../Placement.html" title="Placement">um&iacute;st&#283;n&iacute;</a>, kter&eacute; ud&aacute;v&aacute; jeho polohu ve 3D prostoru.
 </p><p>Finally, it is worth noting that custom parametric objects are <a href="../Scripted_objects.html" title="Scripted objects">easy to program in Python</a>.
 </p><p><b>Read more</b>
 </p>
@@ -101,12 +101,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112052913
+Cached time: 20260112053218
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.062 seconds
-Real time usage: 0.093 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8512/2097152 bytes
 Template argument size: 866/2097152 bytes
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2646/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.077      1 -total
- 67.30%    8.128      1 Template:Manual:TOC
- 55.64%    6.719      1 Manual:Summary/cs
- 17.27%    2.086      2 Template:Docnav
- 11.63%    1.404      2 Template:MenuCommand
+100.00%   12.407      1 -total
+ 61.25%    7.599      1 Template:Manual:TOC
+ 40.57%    5.033      1 Manual:Summary/cs
+ 22.58%    2.801      2 Template:Docnav
+ 12.46%    1.546      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112052913 and revision id 1737158. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112053218 and revision id 1737164. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
