--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -84,7 +84,7 @@
 </p><p>Ne v&scaron;echny objekty jsou ve FreeCADu parametrick&eacute;. Geometrie, kterou importujete z jin&yacute;ch soubor&#367;, &#269;asto neobsahuje &#382;&aacute;dn&eacute; parametry a jedn&aacute; se o jednoduch&eacute;, neparametrick&eacute; objekty. Ty v&scaron;ak lze &#269;asto pou&#382;&iacute;t jako z&aacute;klad nebo v&yacute;choz&iacute; bod pro nov&#283; vytvo&#345;en&eacute; parametrick&eacute; objekty, samoz&#345;ejm&#283; v z&aacute;vislosti na po&#382;adavc&iacute;ch parametrick&eacute;ho objektu a kvalit&#283; importovan&eacute; geometrie.
 </p><p>V&scaron;echny objekty, a&#357; u&#382; parametrick&eacute; nebo ne, v&scaron;ak budou m&iacute;t n&#283;kolik z&aacute;kladn&iacute;ch parametr&#367;, jako je n&aacute;zev, kter&yacute; je v dokumentu jedine&#269;n&yacute; a nelze ho upravovat, &scaron;t&iacute;tek, co&#382; je u&#382;ivatelsky definovan&yacute; n&aacute;zev, kter&yacute; lze upravovat, a <a href="../Placement.html" title="Placement">um&iacute;st&#283;n&iacute;</a>, kter&eacute; ud&aacute;v&aacute; jeho polohu ve 3D prostoru.
 </p><p>Na z&aacute;v&#283;r stoj&iacute; za zm&iacute;nku, &#382;e vlastn&iacute; parametrick&eacute; objekty se <a href="../Scripted_objects.html" title="Scripted objects">jazyce Python snadno programuj&iacute;</a>.
-</p><p><b>Read more</b>
+</p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Property_editor.html" class="mw-redirect" title="Property editor">The properties editor</a></li>
 <li><a href="../Scripted_objects.html" title="Scripted objects">How to program parametric objects</a></li>
@@ -101,12 +101,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053304
+Cached time: 20260112053400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.066 seconds
-Real time usage: 0.112 seconds
+CPU time usage: 0.059 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8512/2097152 bytes
 Template argument size: 866/2097152 bytes
@@ -117,14 +117,14 @@ Unstrip post&#8208;expand size: 2646/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.730      1 -total
- 63.20%    7.413      1 Template:Manual:TOC
- 43.35%    5.085      1 Manual:Summary/cs
- 17.64%    2.069      2 Template:Docnav
- 15.30%    1.795      2 Template:MenuCommand
+100.00%   18.077      1 -total
+ 68.40%   12.365      1 Template:Manual:TOC
+ 53.71%    9.709      1 Manual:Summary/cs
+ 18.87%    3.411      2 Template:Docnav
+  9.74%    1.760      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112053304 and revision id 1737166. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112053400 and revision id 1737168. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
