--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -26,7 +26,7 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Preferences_TechDraw_Page_General.png&amp;filetimestamp=20250625171148&amp;.html" class="mw-file-description"><img src="../File/Preferences_TechDraw_Page_General.png" decoding="async" width="350" height="659" class="mw-file-element" data-file-width="578" data-file-height="1088"></a><figcaption>Allgemeine Einstellungen</figcaption></figure>
 <p><span id="Drawing_Update"></span>
 </p>
-<h3><span class="mw-headline" id="Zeichnungsaktualisierung">Zeichnungsaktualisierung</span></h3>
+<h3><span id="Aktualisieren_der_Zeichnungsbl.C3.A4tter"></span><span class="mw-headline" id="Aktualisieren_der_Zeichnungsbl&auml;tter">Aktualisieren der Zeichnungsbl&auml;tter</span></h3>
 <div class="mw-translate-fuzzy">
 <ul><li><b>Mit 3D aktualisieren (globale Richtlinie)</b>: Gibt an, ob die Seiten jedes Mal aktualisiert werden, wenn das 3D-Modells ge&auml;ndert wird oder nicht.</li>
 <li><b>Seiten&uuml;berschreibung zulassen (globale Richtlinie)</b>: Gibt an, ob die Eigenschaft <b><a href="../de/TechDraw_PageDefault.html#Eigenschaften" title="TechDraw PageDefault/de">Keep Updated</a></b> (aktuell halten) eines Zeichnungsblattes den globalen Parameter <b>Mit 3D aktualisieren</b> &uuml;berschreiben kann oder nicht.</li>
@@ -305,12 +305,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053155
+Cached time: 20260112053405
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.137 seconds
+CPU time usage: 0.107 seconds
+Real time usage: 0.216 seconds
 Preprocessor visited node count: 645/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
@@ -321,19 +321,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.360      1 -total
- 37.53%    8.016      1 Template:TechDraw_Tools_navi/de
- 23.45%    5.008      2 Template:Navigation_menu_2
- 11.15%    2.381     33 Template:Version/de
-  9.57%    2.044      1 Template:Userdocnavi/de
-  9.23%    1.972      2 Template:Docnav/de
-  6.03%    1.288      2 Template:Button
-  5.74%    1.226      1 Template:TOCright
-  5.36%    1.144      1 Template:KEY
-  5.14%    1.097      2 Template:MenuCommand
+100.00%   60.078      1 -total
+ 22.53%   13.538     33 Template:Version/de
+ 21.07%   12.659      1 Template:TOCright
+ 16.32%    9.802      1 Template:TechDraw_Tools_navi/de
+  9.58%    5.753      2 Template:MenuCommand
+  6.34%    3.809      2 Template:Docnav/de
+  6.05%    3.633      2 Template:Navigation_menu_2
+  3.73%    2.243      2 Template:Button
+  3.57%    2.144      1 Template:Userdocnavi/de
+  2.61%    1.570      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112053154 and revision id 1737162. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112053404 and revision id 1737170. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
