--- a/wiki/cs/Manual;Parametric_objects.html
+++ b/wiki/cs/Manual;Parametric_objects.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Gli oggetti Parametrici (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Obiekty parametryczne (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:obiecte parametrice (15% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1055;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1077; &#1086;&#1073;&#1098;&#1077;&#1082;&#1090;&#1099; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#21442;&#25968;&#21270;&#23545;&#35937; (30% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Parametric_objects.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12497;&#12521;&#12513;&#12488;&#12522;&#12483;&#12463;&#12539;&#12458;&#12502;&#12472;&#12455;&#12463;&#12488; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -86,10 +86,10 @@
 </p><p>Na z&aacute;v&#283;r stoj&iacute; za zm&iacute;nku, &#382;e vlastn&iacute; parametrick&eacute; objekty se <a href="../Scripted_objects.html" title="Scripted objects">jazyce Python snadno programuj&iacute;</a>.
 </p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<ul><li><a href="../Property_editor.html" class="mw-redirect" title="Property editor">The properties editor</a></li>
-<li><a href="../Scripted_objects.html" title="Scripted objects">How to program parametric objects</a></li>
-<li><a href="../Placement.html" title="Placement">Positioning objects in FreeCAD</a></li>
-<li><a href="../Std_DependencyGraph.html" title="Std DependencyGraph">Enabling the dependency graph</a></li></ul>
+<ul><li><a href="../Property_editor.html" class="mw-redirect" title="Property editor">Editor vlastnost&iacute;</a></li>
+<li><a href="../Scripted_objects.html" title="Scripted objects">Jak programovat parametrick&eacute; objekty</a></li>
+<li><a href="../Placement.html" title="Placement">Um&iacute;st&#283;n&iacute; objekt&#367; ve FreeCADu</a></li>
+<li><a href="../Std_DependencyGraph.html" title="Std DependencyGraph">Povolen&iacute; grafu z&aacute;vislost&iacute;</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -101,30 +101,30 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053400
+Cached time: 20260112053508
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.059 seconds
-Real time usage: 0.108 seconds
+CPU time usage: 0.057 seconds
+Real time usage: 0.084 seconds
 Preprocessor visited node count: 81/1000000
 Post&#8208;expand include size: 8512/2097152 bytes
 Template argument size: 866/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2646/5000000 bytes
+Unstrip post&#8208;expand size: 2650/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.077      1 -total
- 68.40%   12.365      1 Template:Manual:TOC
- 53.71%    9.709      1 Manual:Summary/cs
- 18.87%    3.411      2 Template:Docnav
-  9.74%    1.760      2 Template:MenuCommand
+100.00%    9.482      1 -total
+ 62.39%    5.916      1 Template:Manual:TOC
+ 48.26%    4.576      1 Manual:Summary/cs
+ 20.68%    1.961      2 Template:Docnav
+ 12.38%    1.174      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112053400 and revision id 1737168. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410708-0!canonical and timestamp 20260112053508 and revision id 1737172. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
