--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -27,12 +27,10 @@
 <p><span id="Drawing_Update"></span>
 </p>
 <h3><span id="Aktualisieren_der_Zeichnungsbl.C3.A4tter"></span><span class="mw-headline" id="Aktualisieren_der_Zeichnungsbl&auml;tter">Aktualisieren der Zeichnungsbl&auml;tter</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li><b>Mit 3D aktualisieren (globale Richtlinie)</b>: Gibt an, ob die Seiten jedes Mal aktualisiert werden, wenn das 3D-Modells ge&auml;ndert wird oder nicht.</li>
-<li><b>Seiten&uuml;berschreibung zulassen (globale Richtlinie)</b>: Gibt an, ob die Eigenschaft <b><a href="../de/TechDraw_PageDefault.html#Eigenschaften" title="TechDraw PageDefault/de">Keep Updated</a></b> (aktuell halten) eines Zeichnungsblattes den globalen Parameter <b>Mit 3D aktualisieren</b> &uuml;berschreiben kann oder nicht.</li>
+<ul><li><b>Mit 3D aktualisieren (globale Richtlinie)</b>: Gibt an, ob die Seiten jedes Mal aktualisiert werden, wenn das 3D-Modell ge&auml;ndert wird oder nicht.</li>
+<li><b>&Uuml;berschreiben durch Blatteigenschaften zulassen (globale Richtlinie)</b>: Gibt an, ob die Eigenschaft <b><a href="../de/TechDraw_PageDefault.html#Properties" title="TechDraw PageDefault/de">Keep Updated</a></b> (aktuell halten) eines Zeichnungsblattes den globalen Parameter <b>Update with 3D</b> &uuml;berschreiben kann oder nicht.</li>
 <li><b>Zeichnungsblatt aktuell halten</b>: H&auml;lt Zeichnungsbl&auml;tter mit den &Auml;nderungen des 3D-Modells <i>in Echtzeit</i> synchron. Dies kann die Reaktionszeit verlangsamen.</li>
 <li><b>Sekund&auml;re Ansichten automatisch verteilen</b>: Verteilt Sekund&auml;ransichten in <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppen</a> automatisch.</li></ul>
-</div>
 <p><span id="Labels"></span>
 </p>
 <h3><span class="mw-headline" id="Beschriftungen">Beschriftungen</span></h3>
@@ -305,13 +303,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053405
+Cached time: 20260112053633
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.216 seconds
-Preprocessor visited node count: 645/1000000
+CPU time usage: 0.108 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 644/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -321,19 +319,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.078      1 -total
- 22.53%   13.538     33 Template:Version/de
- 21.07%   12.659      1 Template:TOCright
- 16.32%    9.802      1 Template:TechDraw_Tools_navi/de
-  9.58%    5.753      2 Template:MenuCommand
-  6.34%    3.809      2 Template:Docnav/de
-  6.05%    3.633      2 Template:Navigation_menu_2
-  3.73%    2.243      2 Template:Button
-  3.57%    2.144      1 Template:Userdocnavi/de
-  2.61%    1.570      1 Template:KEY
+100.00%   23.009      1 -total
+ 31.60%    7.271      1 Template:TechDraw_Tools_navi/de
+ 18.57%    4.272      2 Template:Navigation_menu_2
+ 16.66%    3.834     33 Template:Version/de
+  8.36%    1.924      2 Template:Docnav/de
+  7.56%    1.740      2 Template:Button
+  7.46%    1.716      1 Template:Userdocnavi/de
+  6.03%    1.387      2 Template:MenuCommand
+  5.75%    1.322      1 Template:TOCright
+  5.23%    1.204      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112053404 and revision id 1737170. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112053633 and revision id 1737176. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
