--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -6,14 +6,14 @@
 <li><a href="../it/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Importare e esportare altri tipi di file (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Import i eksport do plik&oacute;w innych format&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Importul &#537;i exportul spre alte tipuri de fi&#537;iere (44% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1048;&#1084;&#1087;&#1086;&#1088;&#1090; &#1080; &#1101;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090; &#1074; &#1076;&#1088;&#1091;&#1075;&#1080;&#1077; &#1090;&#1080;&#1087;&#1099; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#23548;&#20837;&#21644;&#23548;&#20986;&#21040;&#20854;&#20182;&#25991;&#20214;&#31867;&#22411; (56% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#20182;&#12398;&#12501;&#12449;&#12452;&#12523;&#24418;&#24335;&#12398;&#12452;&#12531;&#12509;&#12540;&#12488;&#12392;&#12456;&#12463;&#12473;&#12509;&#12540;&#12488; (11% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#45796;&#47480; &#54028;&#51068; &#54805;&#49885;&#51004;&#47196; &#44032;&#51256;&#50724;&#44592;/&#45236;&#48372;&#45236;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametric objects</a></div>
-    <div><a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">All workbenches at a glance</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametrick&eacute; objekty</a></div>
+    <div><a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">P&#345;ehled v&scaron;ech pracovn&iacute;ch ploch</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -228,15 +228,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053605
+Cached time: 20260112053721
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
 CPU time usage: 0.057 seconds
-Real time usage: 0.088 seconds
+Real time usage: 0.098 seconds
 Preprocessor visited node count: 73/1000000
-Post&#8208;expand include size: 8286/2097152 bytes
-Template argument size: 708/2097152 bytes
+Post&#8208;expand include size: 8313/2097152 bytes
+Template argument size: 726/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.414      1 -total
- 71.35%    6.717      1 Template:Manual:TOC
- 51.52%    4.850      1 Manual:Summary/cs
- 24.93%    2.347      2 Template:Docnav
+100.00%   11.351      1 -total
+ 73.31%    8.321      1 Template:Manual:TOC
+ 55.62%    6.313      1 Manual:Summary/cs
+ 23.67%    2.687      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053605 and revision id 1737174. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053720 and revision id 1737178. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
