--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -220,23 +220,23 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametric objects</a></div>
-    <div><a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">All workbenches at a glance</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Parametric_objects.html" title="Manual:Parametric objects">Parametrick&eacute; objekty</a></div>
+    <div><a href="../Manual;All_workbenches_at_a_glance.html" title="Manual:All workbenches at a glance">P&#345;ehled v&scaron;ech pracovn&iacute;ch ploch</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053721
+Cached time: 20260112053730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.057 seconds
-Real time usage: 0.098 seconds
+CPU time usage: 0.055 seconds
+Real time usage: 0.086 seconds
 Preprocessor visited node count: 73/1000000
-Post&#8208;expand include size: 8313/2097152 bytes
-Template argument size: 726/2097152 bytes
+Post&#8208;expand include size: 8340/2097152 bytes
+Template argument size: 744/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.351      1 -total
- 73.31%    8.321      1 Template:Manual:TOC
- 55.62%    6.313      1 Manual:Summary/cs
- 23.67%    2.687      2 Template:Docnav
+100.00%    8.975      1 -total
+ 71.45%    6.413      1 Template:Manual:TOC
+ 50.53%    4.535      1 Manual:Summary/cs
+ 24.67%    2.214      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053720 and revision id 1737178. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053730 and revision id 1737180. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
