Created page with "{| class="wikitable" style="width:65%"  ! Formát  ! Import  ! Export  ! Poznámky |- | STEP    | Ano     | Ano     | Jedná se o nejvěrnější formát pro import/export, který je k dispozici, protože podporuje pevnou geometrii a NURBS. Používejte ho, kdykoli je to možné.  |- | IGES    | Ano     | Ano     | An older solid format, also very well supported. Some older applications don't support STEP but have IGES.  |- | BREP    | Ano     | Ano     | The native form..."

--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -71,137 +71,137 @@
 </p>
 <table class="wikitable" style="width:65%">
 <tbody><tr>
-<th>Format
+<th>Form&aacute;t
 </th>
 <th>Import
 </th>
 <th>Export
 </th>
-<th>Notes
+<th>Pozn&aacute;mky
 </th></tr>
 <tr>
 <td>STEP
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>This is the most faithful import/export format available since it supports solid geometry and NURBS. Use it whenever it is possible.
+<td>Jedn&aacute; se o nejv&#283;rn&#283;j&scaron;&iacute; form&aacute;t pro import/export, kter&yacute; je k dispozici, proto&#382;e podporuje pevnou geometrii a NURBS. Pou&#382;&iacute;vejte ho, kdykoli je to mo&#382;n&eacute;.
 </td></tr>
 <tr>
 <td>IGES
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>An older solid format, also very well supported. Some older applications don't support STEP but have IGES.
 </td></tr>
 <tr>
 <td>BREP
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>The native format of <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCasCade</a>, FreeCAD's geometry kernel.
 </td></tr>
 <tr>
 <td>DXF
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>An open format maintained by Autodesk. Since the 3D data inside a DXF file is encoded in a proprietary format, FreeCAD can only import/export 2D data to/from this format.
 </td></tr>
 <tr>
 <td>DWG
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>The proprietary version of DXF. Requires the installation of the <a rel="nofollow" class="external text" href="https://www.opendesign.com/guestfiles">Teigha File Converter</a> utility. This format suffers from the same limitations as DXF.
 </td></tr>
 <tr>
 <td>OBJ
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>A mesh-based format. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export. An alternative exporter is provided by the Arch workbench, more suited to the export of architectural models.
 </td></tr>
 <tr>
 <td>DAE
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>The main import/export format of Sketchup. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export.
 </td></tr>
 <tr>
 <td>STL
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>A mesh-based format, commonly used for 3D printing. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export.
 </td></tr>
 <tr>
 <td>PLY
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>An older mesh-based format. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export.
 </td></tr>
 <tr>
 <td>IFC
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Industry_Foundation_Classes">Industry Foundation Classes</a>. Requires the installation of <a rel="nofollow" class="external text" href="http://ifcopenshell.org/python">IfcOpenShell-python</a>. The IFC format and its compatibility with other applications is a complex affair, use with care.
 </td></tr>
 <tr>
 <td>SVG
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>An excellent, widespread 2D graphics format
 </td></tr>
 <tr>
 <td>VRML
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>A rather old mesh-based web format.
 </td></tr>
 <tr>
 <td>GCODE
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>Yes
+<td>Ano
 </td>
 <td>FreeCAD can already import and export to/from several flavors of GCode, but only a small number of machines are supported at the moment.
 </td></tr>
 <tr>
 <td>CSG
 </td>
-<td>Yes
+<td>Ano
 </td>
-<td>No
+<td>Ne
 </td>
 <td>OpenSCAD's <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Constructive_solid_geometry">CSG</a> (Constructive Solid Geometry) format.
 </td></tr></tbody></table>
@@ -228,12 +228,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112053805
+Cached time: 20260112054333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.071 seconds
-Real time usage: 0.100 seconds
+CPU time usage: 0.058 seconds
+Real time usage: 0.101 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 8340/2097152 bytes
 Template argument size: 744/2097152 bytes
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.507      1 -total
- 69.55%    7.308      1 Template:Manual:TOC
- 55.69%    5.851      1 Manual:Summary/cs
- 26.29%    2.762      2 Template:Docnav
+100.00%   13.859      1 -total
+ 78.10%   10.824      1 Template:Manual:TOC
+ 58.03%    8.043      1 Manual:Summary/cs
+ 18.98%    2.630      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112053805 and revision id 1737182. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112054333 and revision id 1737184. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
