Updated page Manual:Import and export to other filetypes/cs

--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -95,7 +95,7 @@
 </td>
 <td>Ano
 </td>
-<td>An older solid format, also very well supported. Some older applications don't support STEP but have IGES.
+<td>Star&scaron;&iacute; pevn&yacute; form&aacute;t, kter&yacute; je tak&eacute; velmi dob&#345;e podporov&aacute;n. N&#283;kter&eacute; star&scaron;&iacute; aplikace nepodporuj&iacute; STEP, ale maj&iacute; IGES.
 </td></tr>
 <tr>
 <td>BREP
@@ -104,7 +104,7 @@
 </td>
 <td>Ano
 </td>
-<td>The native format of <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCasCade</a>, FreeCAD's geometry kernel.
+<td>P&#367;vodn&iacute; form&aacute;t <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Cascade_Technology">OpenCasCade</a>, geometrick&eacute; j&aacute;dro FreeCADu.
 </td></tr>
 <tr>
 <td>DXF
@@ -113,7 +113,7 @@
 </td>
 <td>Ano
 </td>
-<td>An open format maintained by Autodesk. Since the 3D data inside a DXF file is encoded in a proprietary format, FreeCAD can only import/export 2D data to/from this format.
+<td>Otev&#345;en&yacute; form&aacute;t spravovan&yacute; spole&#269;nost&iacute; Autodesk. Vzhledem k tomu, &#382;e 3D data uvnit&#345; souboru DXF jsou k&oacute;dov&aacute;na v propriet&aacute;rn&iacute;m form&aacute;tu, m&#367;&#382;e FreeCAD importovat/exportovat pouze 2D data do/z tohoto form&aacute;tu.
 </td></tr>
 <tr>
 <td>DWG
@@ -122,7 +122,7 @@
 </td>
 <td>Ano
 </td>
-<td>The proprietary version of DXF. Requires the installation of the <a rel="nofollow" class="external text" href="https://www.opendesign.com/guestfiles">Teigha File Converter</a> utility. This format suffers from the same limitations as DXF.
+<td>Vlastn&iacute; verze form&aacute;tu DXF. Vy&#382;aduje instalaci n&aacute;stroje <a rel="nofollow" class="external text" href="https://www.opendesign.com/guestfiles">Teigha File Converter</a>. Tento form&aacute;t m&aacute; stejn&aacute; omezen&iacute; jako form&aacute;t DXF.
 </td></tr>
 <tr>
 <td>OBJ
@@ -131,7 +131,7 @@
 </td>
 <td>Ano
 </td>
-<td>A mesh-based format. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export. An alternative exporter is provided by the Arch workbench, more suited to the export of architectural models.
+<td>Form&aacute;t zalo&#382;en&yacute; na s&iacute;ti. M&#367;&#382;e obsahovat pouze troj&uacute;heln&iacute;kov&eacute; s&iacute;t&#283;. V&scaron;echny pevn&eacute; a NURBS objekty FreeCADu budou p&#345;i exportu p&#345;evedeny na s&iacute;&#357;. Alternativn&iacute; export&eacute;r poskytuje pracovn&iacute; prost&#345;ed&iacute; Arch, kter&eacute; je vhodn&#283;j&scaron;&iacute; pro export architektonick&yacute;ch model&#367;.
 </td></tr>
 <tr>
 <td>DAE
@@ -140,7 +140,7 @@
 </td>
 <td>Ano
 </td>
-<td>The main import/export format of Sketchup. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export.
+<td>Hlavn&iacute; importn&iacute;/exportn&iacute; form&aacute;t programu Sketchup. M&#367;&#382;e obsahovat pouze troj&uacute;heln&iacute;kov&eacute; s&iacute;t&#283;. V&scaron;echny pevn&eacute; a NURBS objekty programu FreeCAD budou p&#345;i exportu p&#345;evedeny na s&iacute;&#357;.
 </td></tr>
 <tr>
 <td>STL
@@ -149,7 +149,7 @@
 </td>
 <td>Ano
 </td>
-<td>A mesh-based format, commonly used for 3D printing. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export.
+<td>Form&aacute;t zalo&#382;en&yacute; na s&iacute;ti, b&#283;&#382;n&#283; pou&#382;&iacute;van&yacute; pro 3D tisk. M&#367;&#382;e obsahovat pouze troj&uacute;heln&iacute;kov&eacute; s&iacute;t&#283;. V&scaron;echny pevn&eacute; a NURBS objekty FreeCADu budou p&#345;i exportu p&#345;evedeny na s&iacute;&#357;.
 </td></tr>
 <tr>
 <td>PLY
@@ -158,7 +158,7 @@
 </td>
 <td>Ano
 </td>
-<td>An older mesh-based format. Can only contain triangulated meshes. All solid and NURBS-based objects of FreeCAD will be converted to mesh on export.
+<td>Star&scaron;&iacute; form&aacute;t zalo&#382;en&yacute; na s&iacute;ti. M&#367;&#382;e obsahovat pouze troj&uacute;heln&iacute;kov&eacute; s&iacute;t&#283;. V&scaron;echny pevn&eacute; a NURBS objekty FreeCADu budou p&#345;i exportu p&#345;evedeny na s&iacute;&#357;.
 </td></tr>
 <tr>
 <td>IFC
@@ -167,7 +167,7 @@
 </td>
 <td>Ano
 </td>
-<td><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Industry_Foundation_Classes">Industry Foundation Classes</a>. Requires the installation of <a rel="nofollow" class="external text" href="http://ifcopenshell.org/python">IfcOpenShell-python</a>. The IFC format and its compatibility with other applications is a complex affair, use with care.
+<td><a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Industry_Foundation_Classes">Industry Foundation Classes</a>. Vy&#382;aduje instalaci <a rel="nofollow" class="external text" href="http://ifcopenshell.org/python">IfcOpenShell-python</a>. Form&aacute;t IFC a jeho kompatibilita s jin&yacute;mi aplikacemi je slo&#382;it&aacute; z&aacute;le&#382;itost, pou&#382;&iacute;vejte ho s opatrnost&iacute;.
 </td></tr>
 <tr>
 <td>SVG
@@ -176,7 +176,7 @@
 </td>
 <td>Ano
 </td>
-<td>An excellent, widespread 2D graphics format
+<td>Vynikaj&iacute;c&iacute;, &scaron;iroce roz&scaron;&iacute;&#345;en&yacute; form&aacute;t 2D grafiky
 </td></tr>
 <tr>
 <td>VRML
@@ -185,7 +185,7 @@
 </td>
 <td>Ano
 </td>
-<td>A rather old mesh-based web format.
+<td>Pom&#283;rn&#283; star&yacute; webov&yacute; form&aacute;t zalo&#382;en&yacute; na s&iacute;ti.
 </td></tr>
 <tr>
 <td>GCODE
@@ -194,7 +194,7 @@
 </td>
 <td>Ano
 </td>
-<td>FreeCAD can already import and export to/from several flavors of GCode, but only a small number of machines are supported at the moment.
+<td>FreeCAD ji&#382; um&iacute; importovat a exportovat do/z n&#283;kolika variant Gk&oacute;du, ale v sou&#269;asn&eacute; dob&#283; je podporov&aacute;no pouze mal&eacute; mno&#382;stv&iacute; stroj&#367;.
 </td></tr>
 <tr>
 <td>CSG
@@ -203,7 +203,7 @@
 </td>
 <td>Ne
 </td>
-<td>OpenSCAD's <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Constructive_solid_geometry">CSG</a> (Constructive Solid Geometry) format.
+<td>OpenSCAD <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Constructive_solid_geometry">CSG</a> Form&aacute;t (Constructive Solid Geometry).
 </td></tr></tbody></table>
 <p>Some of these file formats have options. These can be configured from menu <b>Edit &rarr; Preferences &rarr; Import/export:</b>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ImportExport.png&amp;filetimestamp=20240613205404&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ImportExport.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a></span>
@@ -228,12 +228,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112054333
+Cached time: 20260112055211
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.058 seconds
-Real time usage: 0.101 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 8340/2097152 bytes
 Template argument size: 744/2097152 bytes
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.859      1 -total
- 78.10%   10.824      1 Template:Manual:TOC
- 58.03%    8.043      1 Manual:Summary/cs
- 18.98%    2.630      2 Template:Docnav
+100.00%    6.738      1 -total
+ 67.11%    4.522      1 Template:Manual:TOC
+ 47.46%    3.198      1 Manual:Summary/cs
+ 28.66%    1.931      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112054333 and revision id 1737184. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055211 and revision id 1737192. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
