Created page with "Některé z těchto formátů souborů mají volby. Ty lze nakonfigurovat v menu '''Upravit → Předvolby → Import/export:'''"

--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -205,7 +205,7 @@
 </td>
 <td>OpenSCAD <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Constructive_solid_geometry">CSG</a> Form&aacute;t (Constructive Solid Geometry).
 </td></tr></tbody></table>
-<p>Some of these file formats have options. These can be configured from menu <b>Edit &rarr; Preferences &rarr; Import/export:</b>
+<p>N&#283;kter&eacute; z t&#283;chto form&aacute;t&#367; soubor&#367; maj&iacute; volby. Ty lze nakonfigurovat v menu <b>Upravit &rarr; P&#345;edvolby &rarr; Import/export:</b>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ImportExport.png&amp;filetimestamp=20240613205404&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ImportExport.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a></span>
 </p><p><b>Read more</b>
 </p>
@@ -228,12 +228,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055211
+Cached time: 20260112055305
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.050 seconds
-Real time usage: 0.064 seconds
+CPU time usage: 0.056 seconds
+Real time usage: 0.093 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 8340/2097152 bytes
 Template argument size: 744/2097152 bytes
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.738      1 -total
- 67.11%    4.522      1 Template:Manual:TOC
- 47.46%    3.198      1 Manual:Summary/cs
- 28.66%    1.931      2 Template:Docnav
+100.00%    8.544      1 -total
+ 73.44%    6.275      1 Template:Manual:TOC
+ 57.86%    4.944      1 Manual:Summary/cs
+ 22.89%    1.956      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055211 and revision id 1737192. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055305 and revision id 1737196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
