Created page with "[[Image:FreeCAD_022_ImportExport.png]]"

--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Importare e esportare altri tipi di file (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Import i eksport do plik&oacute;w innych format&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Importul &#537;i exportul spre alte tipuri de fi&#537;iere (44% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1048;&#1084;&#1087;&#1086;&#1088;&#1090; &#1080; &#1101;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090; &#1074; &#1076;&#1088;&#1091;&#1075;&#1080;&#1077; &#1090;&#1080;&#1087;&#1099; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#23548;&#20837;&#21644;&#23548;&#20986;&#21040;&#20854;&#20182;&#25991;&#20214;&#31867;&#22411; (56% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Import_and_export_to_other_filetypes.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#20182;&#12398;&#12501;&#12449;&#12452;&#12523;&#24418;&#24335;&#12398;&#12452;&#12531;&#12509;&#12540;&#12488;&#12392;&#12456;&#12463;&#12473;&#12509;&#12540;&#12488; (11% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -228,29 +228,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055305
+Cached time: 20260112055312
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.056 seconds
-Real time usage: 0.093 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 8340/2097152 bytes
 Template argument size: 744/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3131/5000000 bytes
+Unstrip post&#8208;expand size: 3132/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.544      1 -total
- 73.44%    6.275      1 Template:Manual:TOC
- 57.86%    4.944      1 Manual:Summary/cs
- 22.89%    1.956      2 Template:Docnav
+100.00%    9.710      1 -total
+ 74.24%    7.209      1 Template:Manual:TOC
+ 57.40%    5.573      1 Manual:Summary/cs
+ 22.28%    2.163      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055305 and revision id 1737196. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055312 and revision id 1737196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
